--- a/css/road.css
+++ b/css/road.css
@@ -308,7 +308,7 @@
     width: 37px;
     left: 59.4%;
   }
-  #saveDataButton {
+  /* #saveDataButton {
     border: 2px solid #2b13bb;
     border-bottom: 2px solid #2b13bb;
     border-top: 2px solid #2b13bb;
@@ -323,7 +323,7 @@
     height: 37px;
     width: 37px;
     left: 56.8%;
-  }
+  } */
 
   #saveEditGeomButton {
     border: 2px solid #2b13bb;
