--- a/css/road.css
+++ b/css/road.css
@@ -8,9 +8,9 @@
   #deleteFeatureButton {
     display: none;
   }
-  .draw_feature {
+  /* .draw_feature {
     display: none;
-  }
+  } */
 }
 
 @media only screen and (min-width: 992px) {
