--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -761,6 +761,32 @@ border: 2px solid darkblue;
 
 
 
+  #data-table tbody tr:hover {
+    background-color: #9393d633; 
+    cursor: pointer; 
+  }
+
+ 
+  #data-table th, #data-table td {
+    padding: 8px 12px;
+    border: 1px solid #ddd;
+  }
+
+  #data-table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  
+  #data-table thead tr {
+    background-color:#9393d633;
+  }
+
+
+/* Style for checkboxes */
+.leaflet-control-layers input[type="checkbox"] {
+  accent-color: blue; /* Change checkbox color to blue when checked */
+}
 
 
 
