--- a/css/road.css
+++ b/css/road.css
@@ -8,9 +8,9 @@
   #deleteFeatureButton {
     display: none;
   }
-  /* .draw_feature {
+  .draw_feature {
     display: none;
-  } */
+  }
 }
 
 @media only screen and (min-width: 992px) {
@@ -306,9 +306,9 @@
     font-size: 15px;
     height: 37px;
     width: 37px;
-    left: 59.400%;
+    left: 59.4%;
   }
-  #saveDataButton {
+  /* #saveDataButton {
     border: 2px solid #2b13bb;
     border-bottom: 2px solid #2b13bb;
     border-top: 2px solid #2b13bb;
@@ -317,13 +317,13 @@
     position: fixed;
     color: black;
     padding: 5px 5px;
-
+    display: none !important;
     top: 91%;
     font-size: 17px;
     height: 37px;
     width: 37px;
-    left: 56.8% !important;
-  }
+    left: 56.8%;
+  } */
 
   #saveEditGeomButton {
     border: 2px solid #2b13bb;
@@ -391,8 +391,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 35px;
-  height: 35px;
+  width: 32px;
+  height: 32px;
   z-index: 1000;
   padding: 10px;
 }
@@ -519,11 +519,11 @@
 @media only screen and (min-width: 1440px) {
   #helpButton {
     top: 15%;
-    left: 2.1%;
+    left: 1.5%;
   }
   
   #helpButton:hover::after {
-    top:2%; 
-    left: 170%; 
+    top: 15%;
+    left: 1.5%;
   }
 }
