--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
   position: absolute;
   left: 96vw;
   top: 85vh;
-  border: 2px solid darkblue;
+  border: 2px solid darkblue !important;
 }
 
 .leaflet-touch .leaflet-control-layers,
@@ -103,59 +103,6 @@ a {
 } */
 
 
-#table-container {
-  display: none; 
-  position: absolute;
-  width: 30%;
-  height: 40%;
-  top: 55%;
-  right: 1%;
-  overflow: hidden; 
-  scrollbar-width: thin;
-  z-index: 9999;
-  transition: height 0.3s ease, opacity 0.3s ease;
-}
-
-/* #toggle-btn {
-  display: none; 
-  position: absolute;
-  top: 0; 
-  right: 10px;
-  background-color: white;
-  border: 2px solid blue;
-  color: blue;
-  border-radius: 10%;
-  width: 31px;
-  height: 31px;
-  font-size: 18px;
-  text-align: center;
-  line-height: 30px;
-  cursor: pointer;
-  z-index: 10000;
-  transition: background-color 0.3s ease, color 0.3s ease;
-} */
-
-#table-container.show {
-  display: block;
-  overflow: auto; 
-}
-
-#table-container.show #toggle-btn {
-  display: none;
-}
-
-#table-container.minimized {
-  height: 40px;
-  overflow: hidden;
-}
-
-#table-container.minimized #toggle-btn {
-  top: 0;
-}
-
-#table-container.minimized table {
-  display: none;
-}
 /* #toggle-btn:hover {
   background-color: lightblue;
   color: darkblue;
@@ -187,6 +134,62 @@ a {
   background-color: transparent;
   border-radius: 5px;
 } */
+#table-container {
+  display: none; 
+  position: absolute;
+  width: 30%;
+  height: 40%;
+  top: 55%;
+  right: 1%;
+  overflow: hidden; 
+  scrollbar-width: thin;
+  z-index: 9999;
+  transition: height 0.3s ease, opacity 0.3s ease;
+}
+#toggle-btn {
+  display: none ; /* Hide initially */
+  position: fixed;
+  top: 22%; 
+  right: 8px;
+  background-color: white;
+  border: 2px solid darkblue;
+  color: darkblue;
+  border-radius: 10%;
+  width: 35px;
+  height: 35px;
+  font-size: 18px;
+  text-align: center;
+  line-height: 30px;
+  cursor: pointer;
+  z-index: 10000;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+.tablebtn {
+  height: 20px;
+  width: 20px;
+  margin-left: 2px;
+  margin-top: -4px;
+}
+
+#toggle-btn.show {
+  display: block; /* Show when needed */
+}
+
+
+#table-container.show {
+  display: block;
+  overflow: auto; 
+}
+
+#table-container.minimized {
+  height: 40px;
+  overflow: hidden;
+}
+
+#table-container.minimized table {
+  display: none;
+}
+
 
 .ui-autocomplete {
   max-height: 200px;
