--- a/login/register.css
+++ b/login/register.css
@@ -15,7 +15,13 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 100%;
+    width: 65%;
+}
+
+.container h2 {
+    text-align: center; /* Center text horizontally */
+    margin-bottom: -10px;
+    color: #383899;
 }
 
 .right-section {
@@ -26,14 +32,15 @@ body {
 }
 
 .login-container {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 100%;
-    max-width: 400px; /* Adjust as needed */
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px 40px;
+    border-radius: 15px;
+    box-shadow: 0 10px 25px rgb(10 75 90);
+    margin-top: -100px;
+    width: 65%; /* Adjust as needed */
 }
 
+/* Centering the form title */
 .login-title {
     text-align: center;
     margin-bottom: 20px;
@@ -46,22 +53,24 @@ body {
 .form-control {
     margin-bottom: 15px;
     position: relative;
+    display: flex; /* Add this line */
+    justify-content: center; /* Center input fields */
 }
 
 .form-control input {
-    width: 100%;
-    padding: 10px;
+    width: 94%;
+    padding: 12px;
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: 10px;
     box-sizing: border-box;
 }
 
 .form-control i.icon {
     position: absolute;
     top: 50%;
-    left: 10px;
+    left: 15px;
     transform: translateY(-50%);
-    color: black;
+    color: grey;
 }
 
 .form-control input {
@@ -74,19 +83,22 @@ body {
 }
 
 button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007BFF;
+    width: 97%;
+    padding: 15px;
     border: none;
-    border-radius: 4px;
-    color: #fff;
-    font-size: 16px;
+    border-radius: 12px;
+    background-color: #383899;
+    color: white;
+    font-size: 17px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #383899;
 }
 
 p.endline {
@@ -95,7 +107,7 @@ p.endline {
 }
 
 p.endline a.btn {
-    color: #007BFF;
+    color: #383899;
     text-decoration: none;
     font-size: 14px;
 }
@@ -110,6 +122,13 @@ p.endline a.btn:hover {
         padding: 15px;
         width: 90%;
     }
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+    }
 }
 
 @media (max-width: 480px) {
@@ -119,3 +138,12 @@ p.endline a.btn:hover {
     }
 }
 
+@media only screen and (min-width: 1024px) and (max-width: 2555px) {
+    .form-control i.icon {
+        position: absolute;
+        top: 50%;
+        left: 35px;
+        transform: translateY(-50%);
+        color: grey;
+    }
+}
