--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -843,3 +843,30 @@ text-align: center;
   border: none;
   box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
 }
+
+
+/* 
+
+#data-table tbody tr:hover {
+  background-color: #9393d633; 
+  cursor: pointer; 
+}
+
+
+#data-table th, #data-table td {
+  padding: 8px 12px;
+  border: 1px solid #ddd;
+}
+
+#data-table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+
+#data-table thead tr {
+  background-color:#9393d633;
+} */
+
+
+
