--- a/css/geo_mobview.css
+++ b/css/geo_mobview.css
@@ -13,6 +13,7 @@ element.style {
     max-width: 1200px;
     margin: 0 auto;
     /* padding: 20px; */
+    height: 60% !important;
 }
 .leaflet-retina .leaflet-control-layers-toggle {
     background-image: url(images/layers-2x.png);
@@ -32,6 +33,7 @@ form {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     /* display: flex;
     flex-wrap: wrap; */
+   
 }
 
 /* Logo Styles */
@@ -109,7 +111,7 @@ form {
 }
 .text-secondary {
     color: #6c757d !important;
-    margin-left: 41px;
+    margin-left: 4px;
     font-size: 15px;
 }
 .pagination button {
