--- a/css/newdashboard.css
+++ b/css/newdashboard.css
@@ -344,7 +344,7 @@ background-color: #506be7;
 z-index: 2;
 }
 
-
+/* 
 #tablecontainer {
 z-index: 9999;
 position: absolute;
@@ -358,7 +358,7 @@ max-height: 200px;
 font-size: 10px;
 transition: all 0.3s ease;
 
-}
+} */
 
 
 .tableDetail {
