--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -655,11 +655,11 @@ input:-moz-placeholder {
   cursor: pointer;
 }
 
-#data-table th,
+/* #data-table th,
 #data-table td {
   padding: 8px 12px;
   border: 1px solid #ddd;
-}
+} */
 
 #data-table {
   border-collapse: collapse;
