--- a/dashboard.css
+++ b/dashboard.css
@@ -530,3 +530,18 @@ background-color: white;
 }
 
 
+
+table.dataTable tbody th, table.dataTable tbody td {
+  padding: 30px 10px;
+  font-weight: bolder;
+  
+  }
+  .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody > table > thead > tr > th, .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody > table > thead > tr > td, .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody > table > tbody > tr > th, .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody > table > tbody > tr > td {
+    vertical-align: middle;
+    border-bottom: 1px solid black;
+    font-weight: bold;
+}
+
+#search_type {
+  padding: 7px 15px;
+}
