--- a/css/geo_mobview.css
+++ b/css/geo_mobview.css
@@ -1,4 +1,225 @@
 
+body {
+    overflow: hidden;
+}
+
+/* Modal styles */
+.modal-content {
+    font-size: 14px;
+}
+
+.modal-header {
+    background-color: #007bff;
+    color: white;
+    position: sticky !important;
+    top: 0px;
+    z-index: 9999999;
+}
+
+.modal-body {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 0 1rem;
+}
+
+.rate {
+    display: flex;
+}
+
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    padding: 0 20px;
+
+}
+
+.rating input {
+    display: none;
+}
+
+.rating label {
+    cursor: pointer;
+    font-size: 1rem;
+    color: #ddd;
+    transition: color 0.2s;
+}
+
+
+#rating-label {
+    font-size: 10px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 10px;
+}
+
+/* Ensure the map container has a height */
+#map {
+    height: 45vh;
+    width: 100%;
+}
+
+#workDetailsModalLabel {
+    font-size: 14px;
+    text-align: center;
+    justify-content: center;
+    margin-left: 8px;
+}
+
+#workDetailsModal {
+    position: absolute;
+    z-index: 99999;
+    height: 76vh;
+    top: 71px;
+    overflow: auto;
+    scrollbar-width: thin;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    font-size: 10px !important;
+}
+
+#department,
+#fid,
+#workId,#username,#contact {
+
+    border: none;
+    background: white;
+
+}
+
+.abc1 {
+    display: flex;
+    gap: 10 ;
+
+}
+
+
+.abcd {
+    display: flex;
+    gap: 10 ;
+
+}
+
+
+.xyz {
+    font-size: 12px;
+    /* padding: 10px; */
+    text-align: center;
+    font-weight: bold;
+}
+
+#successModal {
+    display: block;
+    position: absolute;
+    width: 285px;
+    left: 19px;
+    top: 30vh;
+}
+
+#workIDInfo {
+    display: none;
+}
+
+/* Header styles */
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 7px;
+    color: white;
+}
+
+.header-logo img {
+    width: 40px;
+}
+
+.user-info {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.dropdown-menu {
+    right: 0;
+    left: auto;
+}
+
+.user-info .dropdown-toggle::after {
+    margin-left: 5px;
+}
+
+.user-name {
+    margin-right: 5px;
+    font-size: 12px;
+    color: black;
+}
+
+.btn-outline-light.dropdown-toggle {
+    padding: 3px 8px;
+    font-size: 12px;
+    border-radius: 5px;
+    color: black;
+    background-color: white;
+    border: 1px solid black;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    min-width: 6rem;
+    padding: .25rem 0;
+    margin: .125rem 0 0;
+    font-size: 0.85rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .15);
+    border-radius: .2rem;
+}
+
+.btn-outline-light.dropdown-toggle {
+    padding: 2px 6px;
+    font-size: 0.85rem;
+    border-radius: 3px;
+    border-color: #333;
+}
+@media only screen and (min-width: 1400px) {
+    .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 7px;
+    /* margin: 0 20px; */
+    color: white;
+}
+.header-logo{
+   margin-left: 3%;
+}
+.user-info{
+    margin-right: 5%;
+}
+}
+
+
+
 /* Global Styles */
 body {
     font-family: Arial, sans-serif;
