--- a/css/geo_mobview.css
+++ b/css/geo_mobview.css
@@ -448,9 +448,9 @@ form {
     margin-right: 10px;
 }
 
-.leaflet-interactive {
+/* .leaflet-interactive {
     transform: scale(1.2);
-}
+} */
 #formButton{
    
         position: absolute;
